# aegis-source

./: .gitmodules  CMakeLists.txt  application.cpp  application.h
interface/: CMakeLists.txt  application.cpp  application.h
src/: CMakeLists.txt
src/aegis/: types.h
src/base/: exception.cpp  exception.h  types.h
src/host/: barrier.h
src/interface/: CMakeLists.txt  application.cpp  application.h
src/secret/: encode.h  keys_bank.cpp  keys_bank.h
src/virtfs/: device_backing.cpp  device_backing.h  device_stream.cpp  device_stream.h  directory.cpp  directory.h  os_accessor.h  path.h  storage.cpp  storage.h
